fix: post albums to /Album and style modal buttons
